fix: SJIP-595 duplicate tooltip on safari

--- a/src/views/Variants/components/PageContent/VariantsTable/index.module.scss
+++ b/src/views/Variants/components/PageContent/VariantsTable/index.module.scss
@@ -14,3 +14,8 @@
   overflow-wrap: unset;
   white-space: nowrap;
 }
+
+.variantTableCellElipsis::after {
+  content: '';
+  display: block;
+}
